--- a/bbqchicken.html
+++ b/bbqchicken.html
@@ -13,9 +13,34 @@
     />
     <title>Barbecue Chicken</title>
 </head>
-<body>
-    <div class="bbq-recipe">
-        <h2>Barbeque Chicken</h2>
+<body class="bg-secondary d-flex p-2 justify-content-center flex-column align-items-center">
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-dark rounded bbq-recipe">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <a class="navbar-brand" href="#"></a>
+          
+            <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
+              <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+                <li class="nav-item active px-5 text-white">
+                  <a class="nav-link" href="#">Home</a>
+                </li>
+                <li class="nav-item px-5">
+                  <a class="nav-link" href="#">About</a>
+                </li>
+                <li class="nav-item px-5">
+                  <a class="nav-link" href="#">Recipes</a>
+                </li>
+                <li class="nav-item px-5">
+                    <a class="nav-link" href="#">Contact Us</a>
+                  </li>
+              </ul>
+            </div>
+          </nav>
+    </header>
+    <div class="bbq-recipe bg-white rounded">
+        <h2 class="text-info">Barbeque Chicken</h2>
         <div class="big-flex">
             <div class="flex-bbq">
                 <p>
@@ -43,9 +68,8 @@
                 <div id="liveAlertPlaceholder"></div>
                 <button type="button" class="btn btn-outline-info share" id="liveAlertBtn">Share</button>
             </div>
-            <img src="images/bbq.jpg">
+            <img class="shadow p-3 mb-5 bg-white rounded" src="images/bbq.jpg">
         </div>
-        <br>
         <br>
         <h4>Ingredients</h4>
         <ul class="list-group list-group-flush">
