--- a/cheesecake.html
+++ b/cheesecake.html
@@ -24,7 +24,7 @@
             <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
               <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
                 <li class="nav-item active px-5 text-white">
-                  <a class="nav-link" href="#">Home</a>
+                  <a class="nav-link" href="index.html">Home</a>
                 </li>
                 <li class="nav-item px-5">
                   <a class="nav-link" href="#">About</a>
