changes to bbq and pasta

--- a/bbqchicken.html
+++ b/bbqchicken.html
@@ -68,7 +68,12 @@
                 <div id="liveAlertPlaceholder"></div>
                 <button type="button" class="btn btn-outline-info share" id="liveAlertBtn">Share</button>
             </div>
-            <img class="shadow p-3 mb-5 bg-white rounded" src="images/bbq.jpg">
+            <div class="hcontainer">
+                <img class="shadow p-3 mb-5 bg-white rounded himage" src="images/bbq.jpg">
+                <div class="middle">
+                    <div class="htext">Barbeque Chicken</div>
+                </div>
+            </div>
         </div>
         <br>
         <h4>Ingredients</h4>
